# wrausmt

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  TODO.md  build.rs  rustfmt.toml
.github/workflows/: main.yml
codegen/: Cargo.toml  README.md  master_extended_ops_list.csv  master_ops_list.csv  master_secondary_ops_list.csv  master_simd_ops_list.csv  ops.py
codegen/src/: code.rs  data_table.rs  exec_table.rs  fields.rs  lib.rs
format/: Cargo.toml
format/src/: loader.rs
spec/: Cargo.toml
spec/src/: error.rs  lib.rs  loader.rs  runner.rs  spectest_module.rs
spec/tests/: main.rs
src/: lib.rs  main.rs
src/error/: mod.rs
src/format/: error.rs  location.rs  mod.rs
src/instructions/: mod.rs  opconsts.rs
src/loader/: mod.rs
src/logger/: mod.rs
src/module/: mod.rs  section.rs
src/runtime/: compile.rs  error.rs  exec.rs  function.rs  function_instance.rs  instantiate.rs  mod.rs  module_instance.rs  stack.rs  (+2 more)
testdata/: blockbr.wat  callandglobal.wat  env.wasm  foldedblock.wat  importer.wat  locals.wasm  locals.wat  meminstr.wat  multiresult.wat  plainblock.wat  simplefunc.c  simplefunc.wasm  simplefunc.wat  simplemem.wat  table.wat
tests/: Cargo.toml  focus_cases.rs  importing.rs  lib.rs  load_and_run.rs  main.rs  memfloat.rs  meminstr32.rs  meminstr64.rs  memoffset.rs  parse.rs  parse_and_run.rs  spec_parse.rs  spec_runner.rs
tests-integration/: Cargo.toml
tests-spec/: Cargo.toml
wrasumt-bin/: Cargo.toml
wrausmt-bin/: Cargo.toml
wrausmt-common/: Cargo.toml
wrausmt-format/: Cargo.toml
wrausmt-runtime/: Cargo.toml  build.rs
(+264 files in other folders)
