[package]
name = "wrausmt"
version = "0.1.0"
authors = ["Jason LeBrun <jblebrun@gmail.com>"]
edition = "2021"

[dependencies]
"codegen" = { path = "codegen" }

[build-dependencies]
"codegen" = { path = "codegen" }

[workspace]
members = [
    "codegen",
    "format",
    "tests-spec",
    "tests-integration",
    "wrasumt-bin",
]
