[workspace]
resolver = "2"
members = [
    "codegen",
    "tests-spec",
    "tests-integration",
    "wrausmt-bin",
    "wrausmt-common",
    "wrausmt-format",
    "wrausmt-runtime",
]

[workspace.dependencies]
codegen = { path = "codegen" }
wrausmt-common = { path = "wrausmt-common" }
wrausmt-format = { path = "wrausmt-format" }
wrausmt-runtime = { path = "wrausmt-runtime" }
